<resources>
    <string name="app_name">Weather App</string>
    <string name="city">City</string>
    <string name="current_temperature">0 *C</string>
    <string name="hourly_forecast">Hourly forecast</string>
    <string name="weekly_forecast">Weekly forecast</string>
    <string name="add_city">+</string>
    <string name="search">Search</string>
    <string name="btn_apply">Apply</string>
    <string name="add_wind_speed_info">Add wind speed info</string>
    <string name="add_humidity_info">Add humidity info</string>
    <string name="popular_cities">Popular cities</string>
    <string name="city_0">Ryazan</string>
    <string name="city_1">Moscow</string>
    <string name="city_2">Saint Petersburg</string>
    <string name="city_3">Kaliningrad</string>
    <string name="city_4">Murmansk</string>
    <string name="enable_dark_theme">Enable dark theme</string>
    <string name="select_font_size">Select font size</string>
    <string name="update_frequency">Update frequency</string>
    <string name="time_format">Time format</string>
    <string name="settings">Settings</string>
    <string name="add_city_settings">Settings</string>
    <string name="about">About</string>
    <string name="request_to_apply">Apply settings?</string>
    <string name="unknown_city_name">Unknown city name</string>
    <string name="connection_lost_msg">Please check your internet connection</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="about_app">About application</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="about_text">WeatherApp v.0.0.0</string>
</resources>
