<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/screen_margin">

    <EditText
        android:id="@+id/city_search_field"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text"
        android:textSize="@dimen/hint_font_size"
        android:hint="@string/search"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/popular_cities_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/city_search_field"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/popular_cities"
        android:textSize="@dimen/label_font_size"
        android:layout_marginTop="@dimen/label_margin_top"/>

    <ScrollView
        android:id="@+id/cities_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popular_cities_label"
        app:layout_constraintBottom_toTopOf="@+id/wind_speed"
        android:layout_marginBottom="@dimen/cities_list_margin"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginEnd="@dimen/screen_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_0"
                android:textSize="@dimen/popular_cities_font_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_1"
                android:textSize="@dimen/popular_cities_font_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_2"
                android:textSize="@dimen/popular_cities_font_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_3"
                android:textSize="@dimen/popular_cities_font_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_4"
                android:textSize="@dimen/popular_cities_font_size"/>

        </LinearLayout>

    </ScrollView>

    <CheckBox
        android:id="@+id/wind_speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/checkbox_margin"
        android:layout_marginBottom="@dimen/checkbox_margin"
        android:text="@string/add_wind_speed_info"
        app:layout_constraintBottom_toTopOf="@+id/btn_apply"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/humidity"/>

    <CheckBox
        android:id="@+id/humidity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_humidity_info"
        android:layout_marginTop="@dimen/checkbox_margin"
        android:layout_marginBottom="@dimen/checkbox_margin"
        app:layout_constraintBottom_toTopOf="@+id/btn_apply"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/wind_speed"/>

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/bt_add_city_margin_end"
        android:layout_marginBottom="@dimen/bt_add_city_margin_bottom"
        android:textSize="@dimen/symbol_font_size"
        android:text="@string/btn_apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>