<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_margin="@dimen/screen_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_dark_theme"
            android:textSize="@dimen/settings_font_size"
            android:layout_marginBottom="@dimen/checkbox_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_font_size"
            android:textSize="@dimen/settings_font_size"
            android:layout_marginBottom="@dimen/checkbox_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_frequency"
            android:textSize="@dimen/settings_font_size"
            android:layout_marginBottom="@dimen/checkbox_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_format"
            android:textSize="@dimen/settings_font_size"
            android:layout_marginBottom="@dimen/checkbox_margin"/>
    </LinearLayout>
</ScrollView>