<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/screen_margin">

    <TextView
        android:id="@+id/popular_cities_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/popular_cities"
        android:textSize="@dimen/label_font_size"/>

    <ScrollView
        android:id="@+id/cities_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popular_cities_label"
        app:layout_constraintBottom_toTopOf="@+id/btn_apply"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginEnd="@dimen/screen_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                android:text="@string/city_0"
                android:textSize="@dimen/popular_cities_font_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                android:text="@string/city_1"
                android:textSize="@dimen/popular_cities_font_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                android:text="@string/city_2"
                android:textSize="@dimen/popular_cities_font_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                android:text="@string/city_3"
                android:textSize="@dimen/popular_cities_font_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                android:text="@string/city_4"
                android:textSize="@dimen/popular_cities_font_size"/>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/symbol_font_size"
        android:text="@string/btn_apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
