<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/wind_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/checkbox_margin"
                android:layout_marginBottom="@dimen/checkbox_margin"
                android:text="@string/add_wind_speed_info"/>

            <CheckBox
                android:id="@+id/humidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_humidity_info"
                android:layout_marginTop="@dimen/checkbox_margin"
                android:layout_marginBottom="@dimen/checkbox_margin"/>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_apply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/symbol_font_size"
        android:text="@string/btn_apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
